feat(search-select): 新增推荐搜索选择的功能

--- a/src/ui/search-select.css
+++ b/src/ui/search-select.css
@@ -140,6 +140,10 @@
                 margin-right: 8px;
                 font-size: 16px;
                 transition: color 0.2s linear;
+                 &:hover {
+                    cursor: pointer;
+                    color: #3c96ff;
+                }
                 &.is-focus {
                     border-color: #3c96ff !important;
                     background: #fff !important;
