--- a/src/ui/search-select-menu.css
+++ b/src/ui/search-select-menu.css
@@ -56,8 +56,9 @@
                 flex: 1;
                 line-height: 32px;
                 &-filter {
-                    color: #313238;
+                    color: #3a84ff;
                     display: inline-block;
+                    font-weight: bold;
                 }
             }
             .item-icon {
