feature(Message): 高阶模式样式调整优化 #417

--- a/src/ui/message.css
+++ b/src/ui/message.css
@@ -253,7 +253,7 @@
   
         .message-tree {
           max-height: 480px;
-          padding: 14px 24px;
+          padding: 14px 32px;
           overflow: auto;
           background: #fff;
           border-radius: 2px;
@@ -281,7 +281,7 @@
             }
 
             .copy-value {
-              padding: 0px 4px;
+              padding-left: 4px;
 
               &:hover {
                 background: rgba(186, 188, 192, 0.2);
@@ -294,14 +294,24 @@
   
         .message-copy {
           position: absolute;
-          top: 20px;
-          right: 40px;
-          font-size: 16px;
+          top: 0px;
+          right: 0px;
+          font-size: 18px;
+          width: 24px;
+          height: 24px;
+          display: flex;
+          align-items: center;
+          border-radius: 0 2px 0 6px;
           cursor: pointer;
+          justify-content: center;
+          background: #F5F7FA;
+          color: #9FA3AE;
   
           &:hover {
+            background: #F0F5FF;
             span {
               color: #3a84ff;
+              
             }
           }
         }
