bugfix(input): Search没有按规范实现

--- a/src/ui/input.css
+++ b/src/ui/input.css
@@ -163,6 +163,13 @@
             }
         }
     }
+
+    .input-right-icon {
+        cursor: pointer;
+        &:hover {
+            color: $primaryColor;
+        }
+    }
 }
 
 .bk-form-input,
