--- a/src/ui/sideslider.css
+++ b/src/ui/sideslider.css
@@ -67,6 +67,11 @@
         font-size: 16px;
         /* font-weight: bold; */
         color: $newBlackColor1;
+        .title-content {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
     }
     &-content {
         overflow: auto;
