bugfix: 修复searchselect checkbox模式下点击checkbox不会选中问题

--- a/src/ui/search-select-menu.css
+++ b/src/ui/search-select-menu.css
@@ -55,6 +55,8 @@
             .item-name {
                 flex: 1;
                 line-height: 32px;
+                display: flex;
+                align-items: center;
                 &-filter {
                     color: #3a84ff;
                     display: inline-block;
