--- a/src/ui/exception.css
+++ b/src/ui/exception.css
@@ -8,6 +8,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin-bottom: 8px;
 
         .exception-image {
             object-fit: contain;
