--- a/src/ui/input.css
+++ b/src/ui/input.css
@@ -186,7 +186,7 @@
     font-size: var(--font-size);
     box-sizing: border-box;
     border: 1px solid $newGreyColor;
-    padding: 0 10px;
+    padding: 0 10px 0 8px;
     text-align: left;
     vertical-align: middle;
     outline: none;
