--- a/src/ui/notify.css
+++ b/src/ui/notify.css
@@ -5,7 +5,7 @@
     flex-direction: row;
     align-items: center;
     position: fixed;
-    padding: 24px;
+    padding: 16px 24px 16px 24px;
     width: 360px;
     background: rgba(255,255,255,1);
     box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.15);
@@ -43,7 +43,7 @@
     align-self: flex-start;
     flex-shrink: 0;
     margin-top: 1px;
-    margin-right: 5px;
+    margin-right: 8px;
     color: #ffffff;
     .bk-icon {
         display: block;
@@ -68,7 +68,7 @@
     word-break: break-all;
     .bk-notify-content-title {
         margin-top: 0;
-        margin-bottom: 4px;
+        margin-bottom: 6px;
         font-size: 14px;
         font-weight: bold;
     }
@@ -95,8 +95,8 @@
 .bk-notify-close {
     text-align: center;
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 8px;
+    top: 8px;
     .bk-icon {
         display: block;
         width: 20px;
