--- a/src/ui/card.css
+++ b/src/ui/card.css
@@ -19,7 +19,7 @@
     width: 100%;
     height: 50px;
     line-height: 50px;
-    padding: 0 20px;
+    padding: 0 24px;
     position: relative;
     .title {
         @mixin ellipsis 90%, inline-block;
@@ -67,7 +67,7 @@
 }
 .bk-card-body {
     width: 100%;
-    padding: 20px 20px;
+    padding: 16px 24px 24px;
 }
 .bk-card-foot {
     width: 100%;
