--- a/src/ui/process.css
+++ b/src/ui/process.css
@@ -8,9 +8,12 @@
         font-size: $iconNormalSize;
     }
     .bk-spin-loading {
-        &.bk-spin-loading-mini{
-            width: 14px;
-            height: 14px;
+        &.bk-spin-loading-mini {
+            width: 22px;
+            height: 22px;
+            display: inline-flex;
+            top: 2px;
+            left: 3px;
         }
     }
     .bk-process-toggle {
@@ -115,7 +118,8 @@
                 }
             }
             .steps-loading {
-                top: -2px;
+                top: 1px;
+                left: 1px;
             }
             .step-item {
                 &.error {
