chore(resize-layout): 可折叠的样式规范

--- a/src/ui/resize-layout.css
+++ b/src/ui/resize-layout.css
@@ -21,6 +21,15 @@
         }
     }
 
+    &-collapsible.bk-resize-layout-collapsed {
+        & > .bk-resize-layout-aside {
+            border: none !important;
+            &:after {
+                display: none;
+            }
+        }
+    }
+
     &-left {
         flex-direction: row;
 
